--- a/Article/what-are-cookies.html
+++ b/Article/what-are-cookies.html
@@ -60,7 +60,8 @@
                             class="ml-3 fa fa-calendar-week"></i> 01-June-2020</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img class="img-fluid p-3 c-img-height" src="https://blog.roamingdeveloper.codes/images/cookies.svg" alt="blog header image">
+                    <img class="img-fluid p-3 c-img-height" src="https://blog.roamingdeveloper.codes/images/cookies.svg"
+                        alt="blog header image">
                 </div>
             </div>
         </div>
@@ -125,11 +126,13 @@
                     <ol>
                         <li class="pb-3">
                             <p>Click on the lock icon on your browser(Just before your URL) and find cookies option.</p>
-                            <img class="img-fluid m-text-center" src="https://blog.roamingdeveloper.codes/images/fig-2.PNG" alt="">
+                            <img class="img-fluid m-text-center"
+                                src="https://blog.roamingdeveloper.codes/images/fig-2.PNG" alt="">
                         </li>
                         <li>
                             <p>Now select the cookie from the list and Remove it. And press Done.</p>
-                            <img class="img-fluid m-text-center" src="https://blog.roamingdeveloper.codes/images/fig-3.PNG" alt="">
+                            <img class="img-fluid m-text-center"
+                                src="https://blog.roamingdeveloper.codes/images/fig-3.PNG" alt="">
                         </li>
                         <li>
                             <p>Now <a class="h-red" href="./what-are-cookies.html"><i
