--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <!-- End Google Tag Manager (noscript) -->
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <a href="https://blog.roamingdeveloper.codes"><span class="navbar-brand h1 logo font-weight-bold" style="color: #D73F42;">Blogs [.]
+            <a href="https://blog.roamingdeveloper.codes"><span class="navbar-brand h1 logo font-weight-bold"
+                    style="color: #D73F42;">Blogs [.]
                     Roaming Developer [.] Codes</span></a>
         </div>
     </nav>
@@ -69,6 +70,7 @@
     </div>
 
     <section id="main">
+        <!-- Article 1 -->
         <div class="container mt-5">
             <div class="row m-text-center">
                 <div class="col-md-3">
@@ -83,7 +85,8 @@
                     </p>
                     <p class="font-weight-bold"><i class="fa fa-user-tie"></i> @akashprasher<i
                             class="ml-3 fa fa-calendar-week"></i> 01-June-2020</p>
-                    <a href="https://blog.roamingdeveloper.codes/Article/what-are-cookies.html"><button class="btn btn-primary font-weight-bold">Read More <i
+                    <a href="https://blog.roamingdeveloper.codes/Article/what-are-cookies.html"><button
+                            class="btn btn-primary font-weight-bold">Read More <i
                                 class="fa fa-arrow-right"></i></button></a>
                 </div>
             </div>
