Adding inst. for images
Signed-off-by: akashprasher <prince.akash.prasher@gmail.com>

--- a/template_for_article/template.html
+++ b/template_for_article/template.html
@@ -68,6 +68,7 @@
                 </div>
                 <div class="col-md-6 text-center">
                     <!-- use a appropriate image for the article -->
+                    <!-- Use can always create a new folder within images foder with you article name -->
                     <img class="img-fluid p-3 c-img-height" src="https://image.freepik.com/free-vector/hand-drawn-design-halloween-ghost-collection_23-2148661772.jpg"
                         alt="blog header image">
                 </div>
