--- a/template_for_article/template.html
+++ b/template_for_article/template.html
@@ -69,7 +69,7 @@
                 <div class="col-md-6 text-center">
                     <!-- use a appropriate image for the article -->
                     <!-- Use can always create a new folder within images foder with you article name -->
-                    <img class="img-fluid p-3 c-img-height" src="https://image.freepik.com/free-vector/hand-drawn-design-halloween-ghost-collection_23-2148661772.jpg"
+                    <img class="img-fluid p-3 c-img-height" title="https://image.freepik.com/free-vector/hand-drawn-design-halloween-ghost-collection_23-2148661772.jpg" src="https://image.freepik.com/free-vector/hand-drawn-design-halloween-ghost-collection_23-2148661772.jpg"
                         alt="blog header image">
                 </div>
             </div>
