--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p class="mb-0"><i class="fa fa-at mr-1"></i> <a href="mailto:hello@roamingdeveloper.codes">Mail</a>
                     </p>
                     <p class="mb-0"><i class="fa fa-github mr-1"></i> <a
-                            href="https://github.com/akashprasher">Github</a></p>
+                            href="https://github.com/Roaming-Developer">Github</a></p>
                     <p class="mb-0"><i class="fa fa-linkedin mr-1"></i> <a
                             href="https://linkedin.com/in/akashprasher">Linkedin</a></p>
                 </div>
